--- a/image4/image4.html
+++ b/image4/image4.html
@@ -19,10 +19,8 @@
 
 <body>
     <nav class="nav">
-
         <div class="logo">
             <img src="../image 27.png" alt="">
-
         </div>
 
         <!-- <div class="align"> -->
@@ -37,73 +35,70 @@
     </nav>
 
     <p><i class="check fa fa-check-circle fa-lg circle-ch"></i></p>
-    <div class="img-1">
-        <div class="profile-image">
-            <img class="my-image" src="../sammy2.JPG" alt="">
-            <h3><i class="fa fa-camera cam"></i></h3>
-            <h2 class="samuel">Samuel Thomas</h2>
-            <div class="element"><i class="symbol far fa-user"></i> Profile <i class="fas fa-angle-right  pro"></i>
+
+    <div class="container">
+        <div class="img-1">
+            <div class="profile-image">
+                <img class="my-image" src="../sammy2.JPG" alt="">
+                <h3><i class="fa fa-camera cam"></i></h3>
+                <h2 class="samuel">Samuel Thomas</h2>
+                <div class="element"><i class="symbol far fa-user"></i> Profile <i class="fas fa-angle-right  pro"></i>
+                </div>
+                <div class="element">
+                    <i class="symbol fas fa-graduation-cap"></i>
+                    Courses
+                    <i class="fas fa-angle-right cour"></i>
+                </div>
+                <div class="element"><i class="symbol fa fa-check"></i> Attendance <i
+                        class="fas fa-angle-right Atten"></i>
+                </div>
+                <p class="logout">Logout<i class="fas fa-angle-right Log"></i></p>
             </div>
-            <div class="element"><i class="symbol fas fa-graduation-cap"></i> Courses <i
-                    class="fas fa-angle-right cour"></i></div>
-            <div class="element"><i class="symbol fa fa-check"></i> Attendance <i class="fas fa-angle-right Atten"></i>
-            </div>
-            <p class="logout">Logout<i class="fas fa-angle-right Log"></i></p>
+            <script type="text/javascript" src="./image4.js"></script>
         </div>
 
+        <div class="general-slider">
+            <div class="slider-container">
+                <div>
+                    <h4>Cyber Security</h4>
+                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                </div>
+                <div>
+                    <h4>Developer</h4>
+                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                </div>
+                <div>
+                    <h4>Dev</h4>
+                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                </div>
 
-
-
-
-
-
-        <script type="text/javascript" src="./image4.js"></script>
-
-
-    </div>
-
-    <div class="general-slider">
-        <div class="slider-container conts">
-            <div>
-                <h4>cyber Security</h4>
-                <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                <div>
+                    <h4>cyber Security</h4>
+                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                </div>
             </div>
+            <div class="slider-container">
+                <div>
+                    <h4>Dev</h4>
+                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                </div>
 
-            <div>
-                <h4>Developer</h4>
-                <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-            </div>
+                <div>
+                    <h4>Dev</h4>
+                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                </div>
 
-            <div>
-                <h4>Dev</h4>
-                <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-            </div>
+                <div>
+                    <h4>Dev</h4>
+                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                </div>
 
-            <div>
-                <h4>cyber Security</h4>
-                <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-            </div>
-        </div>
-
-
-        <div class="slider-container conts">
-            <div>
-                <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-            </div>
-
-            <div>
-                <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-            </div>
-
-            <div>
-                <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-            </div>
-
-            <div>
-                <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                <div>
+                    <h4>Dev</h4>
+                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                </div>
             </div>
         </div>
-
     </div>
 
 
