--- a/image4/image4.html
+++ b/image4/image4.html
@@ -57,48 +57,73 @@
             <script type="text/javascript" src="./image4.js"></script>
         </div>
 
-        <div class="general-slider">
-            <div class="slider-container">
-                <div>
-                    <h4>Cyber Security</h4>
-                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+        <div class="left-pane">
+            <h4>Score your level of interest in these job titles:</h4>
+            <div class="general-slider">
+                <div class="slider-container">
+                    <div>
+                        <div class="rangeHeader">
+                            <h4 class="h44"> Cyper Security</h4>
+                            <h4>1/10</h4>
+                        </div>
+                        <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                    </div>
+                    <div>
+                        <div class="rangeHeader">
+                            <h4 class="h44"> Cyper Security</h4>
+                            <h4>1/10</h4>
+                        </div>
+                        <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                    </div>
+                    <div>
+                        <div class="rangeHeader">
+                            <h4 class="h44"> Cyper Security</h4>
+                            <h4>1/10</h4>
+                        </div>
+                        <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                    </div>
+                    <div>
+                        <div class="rangeHeader">
+                            <h4 class="h44"> Cyper Security</h4>
+                            <h4>1/10</h4>
+                        </div>
+                        <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                    </div>
                 </div>
-                <div>
-                    <h4>Developer</h4>
-                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-                </div>
-                <div>
-                    <h4>Dev</h4>
-                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-                </div>
-
-                <div>
-                    <h4>cyber Security</h4>
-                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                <div class="slider-container">
+                    <div>
+                        <div class="rangeHeader">
+                            <h4 class="h44"> Cyper Security</h4>
+                            <h4>1/10</h4>
+                        </div>
+                        <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                    </div>
+                    <div>
+                        <div class="rangeHeader">
+                            <h4 class="h44"> Cyper Security</h4>
+                            <h4>1/10</h4>
+                        </div>
+                        <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                    </div>
+                    <div>
+                        <div class="rangeHeader">
+                            <h4 class="h44"> Cyper Security</h4>
+                            <h4>1/10</h4>
+                        </div>
+                        <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                    </div>
+                    <div>
+                        <div class="rangeHeader">
+                            <h4 class="h44"> Cyper Security</h4>
+                            <h4>1/10</h4>
+                        </div>
+                        <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
+                    </div>
                 </div>
             </div>
-            <div class="slider-container">
-                <div>
-                    <h4>Dev</h4>
-                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-                </div>
-
-                <div>
-                    <h4>Dev</h4>
-                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-                </div>
-
-                <div>
-                    <h4>Dev</h4>
-                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-                </div>
-
-                <div>
-                    <h4>Dev</h4>
-                    <input class="slider" id="myRange" type="range" min="1" max="100" value="0">
-                </div>
-            </div>
+            <button>Done</button>
         </div>
+       
     </div>
 
 
